<resources>
    <string name="app_name">EsstelingTheGathering</string>
    <string name="log_in">LOG IN</string>
    <string name="don_t_have_an_account_yet">Don\'t have an account yet? \n Register now!</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="activity_login"></string>
    <string name="activity_register"></string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_password">Enter Password</string>
    <string name="error_username_exists">Username Already Exists</string>
    <string name="error_password_match">Passwords Do Not Match</string>
    <string name="error_valid_username_password">Wrong Username or Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_emailadress">Enter emailadress</string>
    <string name="empty_password">Password can\'t be empty</string>
    <string name="emtpy_username">Username cant\'t bet emtpy</string>
</resources>


